Fix spacing between section title and section wrapper

--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -206,11 +206,8 @@ a {
   color: var(--color-section-title);
   font-size: 3rem;
   margin-bottom: 2rem;
+  margin-top: 2rem;
   text-align: center;
-
-  &.first {
-    margin-top: 2rem;
-  }
 }
 
 .section-wrapper {
